set(BOOST_MAJOR 1)
set(BOOST_MINOR 76)
set(BOOST_PATCH 0)
set(BOOST_VER_DOT "${BOOST_MAJOR}.${BOOST_MINOR}.${BOOST_PATCH}")
set(URIPARSER_BUILD_TESTS OFF CACHE BOOL "Turn off URIParser tests" FORCE)
set(URIPARSER_BUILD_DOCS OFF CACHE BOOL "Turn off URIParser docs" FORCE)
set(OPENSSL_ROOT_DIR "/opt/homebrew/opt/openssl@3" CACHE STRING "OpenSSL Root Dir" FORCE)
set(OPENSSL_LIBRARIES "/opt/homebrew/opt/openssl@3/lib" CACHE STRING "OpenSSL Lib Dir" FORCE)
set(SXG_BUILD_SHARED OFF CACHE BOOL "Turn off SXG shared library build" FORCE)
set(SXG_BUILD_STATIC ON CACHE BOOL "Turn on SXG static library build" FORCE)
set(RUN_TEST OFF CACHE BOOL "Turn off SXG test builds" FORCE)
set(SXG_BUILD_EXECUTABLES OFF CACHE BOOL "Turn off SXG executable builds" FORCE)
set(SXG_BUILD_MAN OFF CACHE BOOL "Turn off SXG man builds" FORCE)
set(SXG_BUILD_FUZZER OFF CACHE BOOL "Turn off SXG fuzzer builds" FORCE)

find_package(Boost ${BOOST_VER_DOT})
find_package(OpenSSL REQUIRED)
find_package(LibXml2 REQUIRED)
add_subdirectory(cpp-httplib)
add_subdirectory(json)
add_subdirectory(uriparser)
add_subdirectory(tidy-html5)
add_subdirectory(libsxg)
add_subdirectory(fastText)
add_definitions(-DCPPHTTPLIB_OPENSSL_SUPPORT -DJSON_HAS_CPP_17)
add_library(base64 STATIC "${CMAKE_CURRENT_SOURCE_DIR}/cpp-base64/base64.cpp")
target_include_directories(base64 PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/cpp-base64")
target_include_directories(tidy-static PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/tidy-html5/include")
add_library(ip2location
    "${CMAKE_CURRENT_SOURCE_DIR}/IP2Location-C-Library/libIP2Location/IP2Location.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/IP2Location-C-Library/libIP2Location/IP2Location.h")
target_include_directories(ip2location PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/IP2Location-C-Library/libIP2Location/")
